infrastructure/kubernetes/istio/gateway/istio-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: food-subscription-gateway
  namespace: food-subscription
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "food-subscription.local"
        - "*"
      tls:
        httpsRedirect: true
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: food-subscription-tls
      hosts:
        - "food-subscription.local"
        - "*"
